--- a/xchu_mapping/CMakeLists.txt
+++ b/xchu_mapping/CMakeLists.txt
@@ -3,7 +3,7 @@ project(xchu_mapping)
 
 add_compile_options(-std=c++11)
 
-find_package(PCL 1.8 REQUIRED)
+find_package(PCL REQUIRED)
 find_package(Eigen3 REQUIRED)
 #find_package(OpenCV REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
