--- a/xchu_mapping/package.xml
+++ b/xchu_mapping/package.xml
@@ -11,10 +11,9 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>eigen</build_depend>
   <build_depend>nav_msgs</build_depend>
-  <build_depend>ndt_gpu</build_depend>
+  <build_depend>ndt_omp</build_depend>
   <build_depend>ndt_cpu</build_depend>
   <build_depend>pcl_conversions</build_depend>
-  <build_depend>pcl_omp_registration</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
@@ -24,6 +23,7 @@
   <build_export_depend>eigen</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>ndt_cpu</build_export_depend>
+  <build_export_depend>ndt_omp</build_export_depend>
   <build_export_depend>pcl_conversions</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
@@ -35,6 +35,7 @@
   <exec_depend>eigen</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>ndt_cpu</exec_depend>
+  <exec_depend>ndt_omp</exec_depend>
   <exec_depend>pcl_conversions</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
